--- a/public/css/login.css
+++ b/public/css/login.css
@@ -1,26 +1,3 @@
-@font-face {
-  font-family: 'Montserrat';
-  src: url('./fonts/Montserrat-VariableFont_wght.ttf') format('truetype');
-  font-weight: 100 900;
-  font-display: swap;
-}
-
-
-:root {
-  font-weight: 16px;
-  font-family: 'Montserrat';
-}
-
-* {
-  margin: 0px;
-  padding: 0px;
-  box-sizing: border-box;
-}
-
-body {
-  height: 100dvh;
-  width: 100%;
-}
 
 .wrapper {
   width: 100%;
@@ -37,7 +14,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('./images/Scoops-kinds-ice-cream.webp');
+  background-image: url('../images/Scoops-kinds-ice-cream.webp');
   background-size: cover;
   background-position: center;
   filter: blur(2px);
@@ -60,7 +37,8 @@ form h1 {
   margin: 8px 0px;
 }
 
-form input[type="text"] {
+form input[type="text"],
+form input[type="password"] {
   margin-top: 4px;
   font-size: 0.9rem;
   padding: 8px 16px;
@@ -76,7 +54,11 @@ form .button-container {
   justify-content: center;
 }
 
-
+form .error-msg {
+  color: red;
+  font-size: smaller;
+  font-weight: 500;
+}
 
 form button {
   margin: 16px 0px 8px;
