--- a/public/css/general.css
+++ b/public/css/general.css
@@ -9,6 +9,10 @@
   font-weight: 16px;
   font-family: 'Montserrat';
   --shadow: 4px 4px 12px rgb(0, 0, 0, 0.10);
+  --inverted-shadow: -4px 4px 12px rgb(0, 0, 0, 0.10);
+  
+  --primary-color: #334259;
+  --dark-primary-color: #243041;
 }
 
 * {
