--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -17,6 +17,14 @@ main .grid-item {
 
 main .grid-item:nth-child(1) {
   grid-column: 1 / 4;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+main .grid-item:nth-child(1) > div {
+  border: 1px solid black;
+  flex: 1;
 }
 
 main .grid-item:nth-child(2) {
