--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -5,7 +5,7 @@ main {
   overflow-y: auto;
   display: grid;
   grid-template-columns: repeat(5, 1fr);
-  grid-auto-rows: 400px;
+  grid-template-rows: repeat(4, 245px);
 }
 
 main .grid-item {
@@ -16,24 +16,90 @@ main .grid-item {
 }
 
 main .grid-item:nth-child(1) {
-  grid-column: 1 / 4;
+  grid-column: 1 / 5;
+  grid-row: span 2;
   display: flex;
   flex-direction: column;
   gap: 8px;
 }
 
-main .grid-item:nth-child(1) > div {
+main .grid-item:nth-child(1) .h1-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+main .grid-item:nth-child(1) .h1-container .toggles-container {
+  display: flex;
+  gap: 12px;
+}
+
+main .grid-item:nth-child(1) .h1-container .toggles-container button {
+  background-color: transparent;
+  padding: 0px 2px;
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.397);
+  color: rgba(0, 0, 0, 0.397);
+  
+  transition: all 0.2s;
+}
+
+main .grid-item:nth-child(1) .h1-container .toggles-container button:hover {
+  cursor: pointer;
+  color: var(--primary-color);
+  border-bottom: 1px solid var(--primary-color  );
+}
+
+main .grid-item:nth-child(1) .h1-container .toggles-container button.selected {
+  font-weight: 700;
+  border-bottom: 2px solid var(--primary-color);
+  color: var(--primary-color);
+}
+
+main .grid-item:nth-child(1) .chart-container {
   flex: 1;
 }
 
 main .grid-item:nth-child(2) {
-  grid-column: 4 / 6;
+  grid-column: 5 / 6;
+  grid-row: span 2;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+main .grid-item:nth-child(2) .flavor-container {
+  flex: 1;
+  padding: 12px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+main .flavor-container .flavor {
+  width: 100%;
+  height: 15%;
+  background-color: var(--primary-color);
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+  font-size: 1.2rem;
+  color: white;
+  transition: all 0.3s;
+}
+
+main .flavor-container .flavor:hover {
+  background-color: var(--dark-primary-color);
 }
 
 main .grid-item:nth-child(3) {
   grid-column: -4 / -6;
+  grid-row: span 2;
 }
 
 main .grid-item:nth-child(4) {
   grid-column: -1 / -4;
+  grid-row: span 2;
 }
