--- a/public/css/general.css
+++ b/public/css/general.css
@@ -7,7 +7,7 @@
 
 :root {
   font-weight: 16px;
-  font-family: 'Montserrat';
+  font-family: Arial;
   --shadow: 4px 4px 12px rgb(0, 0, 0, 0.10);
   --inverted-shadow: -4px 4px 12px rgb(0, 0, 0, 0.10);
   
