--- a/public/css/general.css
+++ b/public/css/general.css
@@ -50,3 +50,11 @@ button {
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15), 
               0 2px 8px rgba(0, 0, 0, 0.05);
 }
+
+table th {
+  font-weight: 700;
+}
+
+table td {
+  font-weight: 500;
+}
