--- a/public/css/order.css
+++ b/public/css/order.css
@@ -178,19 +178,21 @@
       border-radius: 8px;
       padding: 16px 32px;
       display: flex;
-      gap: 16px;
+      gap: 20px;
       flex-direction: column;
     }
 
     #add_order_modal .upcomming-order-div .upcomming-order-container {
-      flex: 1;
       display: flex;
       flex-direction: column;
       gap: 4px;
+      max-height: 363px;
+      overflow: auto;
+      border-radius: 8px;
+      flex: 1;
     }
 
     .upcomming-order-container .order {
-      height: 60px;
       width: 100%;
       display: flex;
       justify-content: space-between;
@@ -236,7 +238,6 @@
     }
 
     .add-order-form .btn-container,
-    .upcomming-order-div .btn-container,
     .update-payment-form .btn-container {
       padding-top: 12px;
       width: 100%;
@@ -246,6 +247,15 @@
       align-items: end;
       gap: 8px;
       flex: 1;
+    }
+
+    .upcomming-order-div .btn-container {
+      width: 100%;
+      grid-column: 2 / -1;
+      display: flex;
+      justify-content: end;
+      align-items: end;
+      gap: 8px;
     }
 
     .add-order-form .btn-container button,
