--- a/public/css/order.css
+++ b/public/css/order.css
@@ -185,11 +185,12 @@
     #add_order_modal .upcomming-order-div .upcomming-order-container {
       display: flex;
       flex-direction: column;
-      gap: 4px;
+      gap: 8px;
       max-height: 363px;
       overflow: auto;
       border-radius: 8px;
       flex: 1;
+      padding: 0px 8px;
     }
 
     .upcomming-order-container .order {
@@ -199,7 +200,7 @@
       align-items: center;
       border-radius: 8px;
       border: none;
-      padding: 8px 16px;
+      padding: 16px;
       background-color: var(--primary-color);
       color: white;
       transition: all 0.3s;
