--- a/public/css/account.css
+++ b/public/css/account.css
@@ -19,7 +19,48 @@ body {
   background-color: rgb(205, 15, 15);
 }
 
-main .grid-item {
-  padding: 20px;
-  margin-top: 28px;
+.add-user-form .input-field input {
+  width: 100%;
+  outline: none;
+  border: 1px solid #D9D9D9;
+  border-radius: 8px;
+  font-size: 0.9rem;
+  padding: 8px 12px;
+}
+
+.add-user-form .input-field input {
+  width: 300px;
+}
+
+.add-user-form {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+#add_user_modal .btn-container {
+  margin-top: 12px;
+  display: flex;
+  gap: 8px;
+}
+
+#add_user_modal .btn-container button {
+  font-size: 0.9rem;
+  padding: 12px;
+  width: 100%;
+  border-radius: 8px;
+  border: none;
+}
+
+#add_user_modal .btn-container button[type='button']:hover {
+  background-color: #c6c2c2;
+}
+
+#add_user_modal .btn-container button[type='submit'] {
+  background-color: var(--primary-color);
+  color: white;
+}
+
+#add_user_modal .btn-container button[type='submit']:hover {
+  background-color: var(--dark-primary-color);
 }
